# logseq-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
logseq/: cli.py  db.py  index.py  model.py  parser.py  queries.py  render.py  serializer.py  stats.py  tokenize.py  writer.py
logseq/commands/: atomic.py  db.py  tui.py  view.py  write.py
logseq/tui/: __main__.py  app.py  data.py  main.py  modals.py  style.tcss
tests/: test_cli.py  test_index.py  test_json_contract.py  test_parser.py  test_queries.py  test_render.py  test_round_trip.py  test_tokenize.py  test_tui.py  test_writer.py
tests/fixtures/: 2026_05_21.expected.json  2026_05_21.md  code_fence.expected.json  code_fence.md  logbook.expected.json  logbook.md  nested.expected.json  nested.md  simple.expected.json  simple.md  tags_refs.expected.json  tags_refs.md  task_marker.expected.json  task_marker.md  with_aliases.expected.json  with_aliases.md  with_id.expected.json  with_id.md
