[project]
name = "logseq-skill"
version = "0.1.0"
description = "Parser, indexer, and writer for Logseq markdown vaults — Claude Code skill foundation."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.6"]
tui = ["textual>=0.86,<1.0", "rich>=13"]

[project.scripts]
logseq = "logseq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logseq"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes (unused, undefined)
    "I",        # isort (import order)
    "UP",       # pyupgrade (modern Python idioms)
    "B",        # bugbear (real-world gotchas)
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line-length is handled by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is OK in tests
# Textual framework convention: BINDINGS / CSS_PATH etc. are intentionally
# class-level mutable defaults (declarative class config); ClassVar is
# verbose and not the community idiom.
"logseq/tui/*" = ["RUF012"]
