[project]
name = "logseq-skill"
version = "0.1.0"
description = "LLM-powered query layer for Logseq vaults (SQLite + FTS5 + jieba). Claude Code skill."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["jieba>=0.42"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
logseq = "logseq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logseq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes (unused, undefined)
    "I",        # isort (import order)
    "UP",       # pyupgrade (modern Python idioms)
    "B",        # bugbear (real-world gotchas)
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line-length is handled by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is OK in tests
